<resources>
    <string name="app_name">SmartSuite</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="rb_in">In</string>
    <string name="rb_out">Out</string>
    <string name="comments">Comments*</string>
    <string name="next">Next</string>
    <string name="contact_person">Contact Person :</string>

    <string name="zipcode">Zip Code</string>

    <string name="address">Address</string>
    <string name="desg">Designation</string>


    <string name="emailid">Email*</string>
    <string name="emailid1">Email 1</string>
    <string name="emailid2">Email 2</string>

    <string name="mobileno1">Mobile 1</string>

    <string name="phoneno">Phone Number</string>
    <string name="altno">Alternate Number</string>

    <string name="save">Save</string>
    <string name="client_name">Client Name</string>
    <string name="preparation">Preparation for next follow up</string>
    <string name="submit">Submit</string>
    <string name="SpecialEmail">Special Email To</string>
    <string name="upload">Upload Doc.</string>

    <string name="text_date">date</string>
    <string name="rb_weekly">Weekly</string>
    <string name="rb_montly">Monthly</string>
    <string name="company_name">Company Name</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="remarks">Remarks</string>
    <string name="action_point">Action Points</string>
    <string name="action_Email">Email</string>
    <string name="action_letter">Letter</string>
    <string name="action_meeting">Meeting</string>
    <string name="action_phone_call">Phone Call</string>
    <string name="action_visit">Visit</string>
    <string name="action_selectall">Select All</string>
    <string name="followUpType">Follow Up</string>
    <string name="custom_title">Select Images</string>

    <string name="google_app_id">AIzaSyCIbzmOV6RnDTJn-td_xSTjyBaYQPai40Q</string>
    <string name="sync">SYNC</string>
    <string name="go_button">Go</string>
    <string name="action_send_pdf">send pdf</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="name">Name</string>
    <string name="firstname">First name</string>
    <string name="middlename">Middle name</string>
    <string name="lastname">Surname</string>
    <string name="mobileno">Mobile No*</string>
    <string name="designation">Designation</string>
    <string name="mobileno2">Mobile no2</string>
    <string name="phone">Phone*</string>
    <string name="alternateNo">Alternate no</string>
    <string name="email">Email*</string>
    <string name="email2">Email2</string>
    <string name="email3">Email3</string>
    <string name="addr">Address</string>
    <string name="pincode">Zip code</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="faxno">Fax no</string>
    <string name="done">done submit</string>
    <string name="nameprefix">Name prefix</string>
    <string name="contactPerson">Contact Person :</string>

    <string name="companyname">Company Name*</string>
    <string name="contactperson">Contact Person*</string>
    <string name="leadperson">Lead Person</string>
    <string name="leadReference">Lead Reference</string>
    <string name="website">Web Site</string>
    <string name="pinCode">Pin Code</string>
    <string name="stdcode">STD Code</string>
    <string name="InterrestInProduct">Interest In Product</string>
    <string name="WeeklyOff">Weekly Off</string>
    <string name="PotentialValue">Potential Value(eg.12.15,91.02)</string>
    <string name="NoOfUnits">No Of Units</string>
    <string name="InterestedInProduct">Interested In Product</string>
    <string name="Retry">Retry</string>
</resources>
