<menu

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="Search"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/ic_search_white"

       />

    <item
        android:id="@+id/action_points"
        android:icon="@drawable/ic_loupe"
        android:orderInCategory="1"
        android:title="@string/action_point" />
    <item
        android:id="@+id/action_Email"
        android:icon="@drawable/ic_email"
        android:orderInCategory="2"
        android:title="@string/action_Email"

        />
    <item
        android:id="@+id/action_Letter"
        android:icon="@drawable/ic_file_document"
        android:orderInCategory="3"
        android:title="@string/action_letter"
        />
    <item
        android:id="@+id/action_Meeting"
        android:icon="@drawable/ic_account_multiple"
        android:orderInCategory="4"
        android:title="@string/action_meeting"

        />

    <item
        android:id="@+id/action_phone_call"
        android:icon="@drawable/ic_phone"
        android:orderInCategory="5"
        android:title="@string/action_phone_call"

        />
    <item
        android:id="@+id/action_visit"
        android:icon="@drawable/ic_walk"
        android:orderInCategory="6"
        android:title="@string/action_visit"

        />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_checkbox_marked_circle"
        android:orderInCategory="7"
        android:title="@string/action_selectall"
        />



</menu>
