<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollRegistrationCenter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linearMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15sp"
        android:paddingRight="15sp">


        <EditText
            android:id="@+id/edtState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:paddingTop="20sp"
            android:textColor="@color/primary_dark"
            android:textColorHint="@color/hint"
            android:theme="@style/Theme.App.Base"  android:maxLength="25"
            android:singleLine="true"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>

        <EditText
            android:id="@+id/edtCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:paddingTop="20sp"
            android:textColor="@color/primary_dark"
            android:textColorHint="@color/hint"
            android:theme="@style/Theme.App.Base"
            android:maxLength="25"
            android:singleLine="true"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>


        <LinearLayout
            android:id="@+id/linearEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <EditText
                android:id="@+id/edtEmailId"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="left"
                android:hint="@string/emailid"
                android:inputType="textEmailAddress"
                android:paddingTop="20sp"
                android:textColor="@color/primary_dark"
                android:textColorHint="@color/hint"
                android:theme="@style/Theme.App.Base" />

            <ImageView
                android:id="@+id/imageAddEmail"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.2"
                android:paddingTop="20sp"
                android:src="@drawable/layer_shape_add" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">


            <EditText
                android:id="@+id/edtEmail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailid1"
                android:inputType="textEmailAddress"
                android:paddingTop="20sp"
                android:textColor="@color/primary_dark"
                android:textColorHint="@color/hint"
                android:theme="@style/Theme.App.Base" />

            <EditText
                android:id="@+id/edtEmail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtEmail1"
                android:hint="@string/emailid2"
                android:inputType="textEmailAddress"
                android:paddingTop="20sp"
                android:textColor="@color/primary_dark"
                android:textColorHint="@color/hint"
                android:theme="@style/Theme.App.Base" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/linearMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/edtMobileNo"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="left"
                android:hint="@string/mobileno"
                android:inputType="number"
                android:maxLength="15"
                android:paddingTop="20sp"
                android:textColor="@color/primary_dark"
                android:textColorHint="@color/hint"
                android:theme="@style/Theme.App.Base">

            </EditText>


            <ImageView
                android:id="@+id/imageAddMobile"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.2"
                android:maxLength="10"
                android:paddingTop="20sp"
                android:src="@drawable/layer_shape_add" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeMobileNos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/edtMobileNo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobileno1"
                android:inputType="number"
                android:maxLength="15"
                android:paddingTop="20sp"
                android:textColor="@color/primary_dark"
                android:textColorHint="@color/hint"
                android:theme="@style/Theme.App.Base" />

            <EditText
                android:id="@+id/edtMobileNo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtMobileNo1"
                android:hint="@string/mobileno2"
                android:inputType="number"
                android:maxLength="15"
                android:paddingTop="20sp"
                android:textColor="@color/primary_dark"
                android:textColorHint="@color/hint"
                android:theme="@style/Theme.App.Base" />

        </RelativeLayout>

        <EditText
            android:id="@+id/edtPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/phoneno"
            android:inputType="number"
            android:maxLength="15"
            android:paddingTop="20sp"
            android:textColor="@color/primary_dark"
            android:textColorHint="@color/hint"
            android:theme="@style/Theme.App.Base">

        </EditText>

        <EditText
            android:id="@+id/edtAltNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/altno"
            android:inputType="number"
            android:maxLength="15"
            android:paddingTop="20sp"
            android:textColor="@color/primary_dark"
            android:textColorHint="@color/hint"
            android:theme="@style/Theme.App.Base" />

        <EditText
            android:id="@+id/edtFaxNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/faxno"
            android:inputType="number"
            android:maxLength="12"
            android:paddingTop="20sp"
            android:textColor="@color/primary_dark"
            android:textColorHint="@color/hint"
            android:theme="@style/Theme.App.Base" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtFaxNo"
            android:layout_marginTop="15sp"
            android:background="@drawable/shape_login_btn"
            android:text="@string/save"
            android:textColor="@color/primary_light"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>